--- a/packages/graphql-typescript-definitions/package.json
+++ b/packages/graphql-typescript-definitions/package.json
@@ -27,6 +27,7 @@
     "@types/babel__generator": "^7.0.2",
     "@types/chokidar": "^2.1.3",
     "@types/yargs": "15.0.4",
+    "core-js":"^3.0.0",
     "chalk": "^4.0.0",
     "change-case": "^4.1.1",
     "chokidar": "^3.3.1",
