--- a/packages/graphql-validate-fixtures/package.json
+++ b/packages/graphql-validate-fixtures/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/main/packages/graphql-validate-fixtures/README.md",
   "dependencies": {
+    "core-js": "^3.0.0",
     "chalk": "^4.0.0",
     "fs-extra": "^9.0.0",
     "glob": "^7.1.2",
