--- a/packages/graphql-tool-utilities/package.json
+++ b/packages/graphql-tool-utilities/package.json
@@ -1,6 +1,6 @@
 {
   "name": "graphql-tool-utilities",
-  "version": "1.4.2",
+  "version": "1.4.2-release-plugin-quilt-beta.1",
   "license": "MIT",
   "description": "Common utilities for GraphQL developer tools",
   "main": "index.js",
