--- a/packages/graphql-typescript-definitions/package.json
+++ b/packages/graphql-typescript-definitions/package.json
@@ -1,6 +1,6 @@
 {
   "name": "graphql-typescript-definitions",
-  "version": "0.24.0",
+  "version": "0.24.0-release-plugin-quilt-beta.1",
   "license": "MIT",
   "description": "Generate TypeScript definition files from .graphql documents",
   "main": "index.js",
@@ -27,16 +27,16 @@
     "@types/babel__generator": "^7.0.2",
     "@types/chokidar": "^2.1.3",
     "@types/yargs": "15.0.4",
-    "core-js":"^3.0.0",
     "chalk": "^4.0.0",
     "change-case": "^4.1.1",
     "chokidar": "^3.3.1",
+    "core-js": "^3.0.0",
     "fs-extra": "^9.0.0",
     "glob": "^7.1.2",
     "graphql": ">=14.5.0 <15.0.0",
     "graphql-config": "^2.2.1",
     "graphql-config-utilities": "^1.3.2",
-    "graphql-tool-utilities": "^1.4.2",
+    "graphql-tool-utilities": "^1.4.2-release-plugin-quilt-beta.1",
     "upper-case-first": "^2.0.1",
     "yargs": "^15.3.1"
   },
