--- a/packages/jest-mock-apollo/package.json
+++ b/packages/jest-mock-apollo/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/jest-mock-apollo",
-  "version": "5.1.5",
+  "version": "5.1.5-release-plugin-quilt-beta.1",
   "license": "MIT",
   "description": "Jest + Enzyme mocks for Apollo 2.x",
   "main": "index.js",
@@ -23,7 +23,7 @@
     "apollo-link": "^1.2.3",
     "core-js": "^3.0.0",
     "graphql": "^14.0.0",
-    "graphql-tool-utilities": "^1.4.2"
+    "graphql-tool-utilities": "^1.4.2-release-plugin-quilt-beta.1"
   },
   "devDependencies": {
     "@apollo/react-common": "^3.1.3",
