--- a/packages/sewing-kit-plugin-quilt/package.json
+++ b/packages/sewing-kit-plugin-quilt/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/sewing-kit-plugin-quilt",
-  "version": "0.0.1-import-latest-external-quilt-plugin-beta.1",
+  "version": "0.0.1",
   "description": "Quilt plugins for sewing-kit",
   "publishConfig": {
     "access": "public",
