Update Jest / Webpack versions (#1867)
* Update jest to v26.6.3

* Update webpack version to remove transitive dep on old ssri version

--- a/packages/web-worker/package.json
+++ b/packages/web-worker/package.json
@@ -57,7 +57,7 @@
   ],
   "optionalDependencies": {
     "@babel/core": "^7.0.0",
-    "webpack": ">4.25.1, <=4.5.0"
+    "webpack": "^4.25.1"
   },
   "module": "index.mjs",
   "esnext": "index.esnext",
