update lerna.json and yarn release command

--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "test": "yarn _test",
     "test:ci": "yarn test --coverage",
     "check": "lerna run check",
-    "release": "yarn lint:changelogs && lerna publish",
-    "release-beta": "lerna publish --dist-tag beta",
+    "release": "yarn lint:changelogs && lerna version --no-push --include-merged-tags",
     "clean": "rimraf ./packages/*/build ./packages/*/*.{d.ts,js,esnext,mjs} .sewing-kit",
     "generate": "plop",
     "generate:package": "plop package && yarn plop docs",
