--- a/lerna.json
+++ b/lerna.json
@@ -4,11 +4,5 @@
   "npmClient": "yarn",
   "useWorkspaces": true,
   "version": "independent",
-  "ignoreChanges": ["**/*.md", "**/tests/**", "**/test/**"],
-  "commands": {
-    "publish": {
-      "skipNpm": true,
-      "ignore": ["**/*.md", "**/tests/**", "**/test/**"]
-    }
-  }
+  "ignoreChanges": ["**/*.md", "**/tests/**", "**/test/**"]
 }
