full on copy of what alpaql does to publish

--- a/shipit.yml
+++ b/shipit.yml
@@ -13,8 +13,9 @@ ci:
     - node-build (12.x)
     - node-build (14.x)
 dependencies:
-  post:
-    - yarn run build: {timeout: 1800}
+  override:
+    - yarn install --frozen-lockfile --no-progress
+    - yarn lerna -- bootstrap
 deploy:
   override:
     - yarn run lerna publish from-package --yes
