--- a/shipit.yml
+++ b/shipit.yml
@@ -13,6 +13,7 @@ ci:
     - node-build (12.x)
     - node-build (14.x)
 dependencies:
+  pre:
+    - rm ~/.npmrc
   post:
-    - yarn cache clean
     - yarn run build
