add override to fix deploys

--- a/shipit.yml
+++ b/shipit.yml
@@ -13,5 +13,11 @@ ci:
     - node-build (12.x)
     - node-build (14.x)
 dependencies:
-  post:
-    - yarn run build: {timeout: 1800}
+  override:
+    - yarn install --frozen-lockfile --no-progress
+    - yarn lerna -- bootstrap
+deploy:
+  pre:
+    - yarn run build
+  override:
+    - yarn run lerna publish from-git --yes
