update logic for getting graphql projects

--- a/shipit.yml
+++ b/shipit.yml
@@ -20,4 +20,4 @@ deploy:
   pre:
     - yarn run build
   override:
-    - yarn run lerna publish from-git --yes
+    - node_modules/.bin/lerna publish from-git --yes
