--- a/packages/graphql-config-utilities/package.json
+++ b/packages/graphql-config-utilities/package.json
@@ -1,6 +1,6 @@
 {
   "name": "graphql-config-utilities",
-  "version": "2.0.1",
+  "version": "2.0.1-beta-test.3",
   "license": "MIT",
   "description": "Common utilities for graphql-config",
   "main": "index.js",
