use internal to publish

--- a/lerna.json
+++ b/lerna.json
@@ -4,5 +4,10 @@
   "npmClient": "yarn",
   "useWorkspaces": true,
   "version": "independent",
-  "ignoreChanges": ["**/*.md", "**/tests/**", "**/test/**"]
+  "ignoreChanges": ["**/*.md", "**/tests/**", "**/test/**"],
+  "command": {
+    "publish": {
+      "registry": "https://npm.shopify.io/node/"
+    }
+  }
 }
