Reset beta and allow bump of react-server

--- a/lerna.json
+++ b/lerna.json
@@ -4,10 +4,5 @@
   "npmClient": "yarn",
   "useWorkspaces": true,
   "version": "independent",
-  "ignoreChanges": ["**/*.md", "**/tests/**", "**/test/**"],
-  "command": {
-    "publish": {
-      "registry": "https://npm.shopify.io/node/"
-    }
-  }
+  "ignoreChanges": ["**/*.md", "**/tests/**", "**/test/**"]
 }
