--- a/packages/enzyme-utilities/package.json
+++ b/packages/enzyme-utilities/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/enzyme-utilities",
-  "version": "2.2.4-test-beta.1",
+  "version": "2.2.4",
   "license": "MIT",
   "description": "Enzyme utilities for testing React components",
   "main": "index.js",
