--- a/packages/react-web-worker/package.json
+++ b/packages/react-web-worker/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-web-worker",
-  "version": "1.3.9",
+  "version": "1.3.9-test-beta.2",
   "license": "MIT",
   "description": "A hook for using web workers in React applications",
   "main": "index.js",
