--- a/packages/polyfills/package.json
+++ b/packages/polyfills/package.json
@@ -21,15 +21,15 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/main/packages/polyfills/README.md",
   "dependencies": {
-    "@babel/polyfill": "^7.10.1",
     "@shopify/useful-types": "^2.4.2",
-    "browser-unhandled-rejection": "^1.0.2",
     "caniuse-api": "^3.0.0",
+    "core-js": "^3.12.1",
     "formdata-polyfill": "^3.0.18",
     "intersection-observer": "^0.5.1",
     "intl-pluralrules": "^0.2.1",
     "mutationobserver-shim": "^0.3.3",
     "node-fetch": "^2.3.0",
+    "regenerator-runtime": "^0.13.7",
     "url-polyfill": "^1.1.7",
     "whatwg-fetch": "^3.0.0"
   },
