--- a/packages/jest-mock-router/package.json
+++ b/packages/jest-mock-router/package.json
@@ -19,6 +19,9 @@
     "url": "https://github.com/Shopify/quilt/issues"
   },
   "homepage": "https://github.com/Shopify/quilt/blob/main/packages/jest-mock-router/README.md",
+  "engines": {
+    "node": ">=12.14.0"
+  },
   "devDependencies": {
     "@types/react-router": "^3.0.0",
     "react": "^16.8.1",
