--- a/packages/react-google-analytics/package.json
+++ b/packages/react-google-analytics/package.json
@@ -20,6 +20,9 @@
     "url": "https://github.com/Shopify/quilt/issues"
   },
   "homepage": "https://github.com/Shopify/quilt/blob/main/packages/react-google-analytics/README.md",
+  "engines": {
+    "node": ">=12.14.0"
+  },
   "dependencies": {
     "@shopify/react-import-remote": "^1.2.12"
   },
