--- a/packages/react-html/package.json
+++ b/packages/react-html/package.json
@@ -19,6 +19,9 @@
     "url": "https://github.com/Shopify/quilt/issues"
   },
   "homepage": "https://github.com/Shopify/quilt/blob/main/packages/react-html/README.md",
+  "engines": {
+    "node": ">=12.14.0"
+  },
   "dependencies": {
     "@shopify/react-effect": "^3.3.6",
     "@shopify/react-hydrate": "^1.2.7",
