--- a/packages/address/package.json
+++ b/packages/address/package.json
@@ -19,6 +19,9 @@
     "url": "https://github.com/Shopify/quilt/issues"
   },
   "homepage": "https://github.com/Shopify/quilt/blob/main/packages/address/README.md",
+  "engines": {
+    "node": ">=12.14.0"
+  },
   "devDependencies": {
     "@shopify/address-mocks": "^1.5.8",
     "@shopify/jest-dom-mocks": "^2.11.7"
