--- a/packages/css-utilities/package.json
+++ b/packages/css-utilities/package.json
@@ -20,6 +20,9 @@
     "url": "https://github.com/Shopify/quilt/issues"
   },
   "homepage": "https://github.com/Shopify/quilt/blob/main/packages/css-utilities/README.md",
+  "engines": {
+    "node": ">=12.14.0"
+  },
   "dependencies": {
     "@types/classnames": "^2.2.7",
     "classnames": "^2.2.6"
