--- a/packages/graphql-typed/package.json
+++ b/packages/graphql-typed/package.json
@@ -20,6 +20,9 @@
     "url": "https://github.com/Shopify/quilt/issues"
   },
   "homepage": "https://github.com/Shopify/quilt/blob/main/packages/graphql-typed/README.md",
+  "engines": {
+    "node": ">=12.14.0"
+  },
   "peerDependencies": {
     "graphql": ">=14.5.0 <15.0.0"
   },
