--- a/packages/jest-koa-mocks/package.json
+++ b/packages/jest-koa-mocks/package.json
@@ -19,6 +19,9 @@
     "url": "https://github.com/Shopify/quilt/issues"
   },
   "homepage": "https://github.com/Shopify/quilt/blob/main/packages/jest-koa-mocks/README.md",
+  "engines": {
+    "node": ">=12.14.0"
+  },
   "dependencies": {
     "koa": "^2.5.0",
     "node-mocks-http": "^1.5.8"
