--- a/packages/koa-metrics/package.json
+++ b/packages/koa-metrics/package.json
@@ -19,6 +19,9 @@
     "url": "https://github.com/Shopify/quilt/issues"
   },
   "homepage": "https://github.com/Shopify/quilt/blob/main/packages/koa-metrics/README.md",
+  "engines": {
+    "node": ">=12.14.0"
+  },
   "dependencies": {
     "@shopify/statsd": "^2.1.4"
   },
