--- a/packages/koa-performance/package.json
+++ b/packages/koa-performance/package.json
@@ -20,6 +20,9 @@
     "url": "https://github.com/Shopify/quilt/issues"
   },
   "homepage": "https://github.com/Shopify/quilt/blob/main/packages/koa-performance/README.md",
+  "engines": {
+    "node": ">=12.14.0"
+  },
   "dependencies": {
     "@shopify/network": "^1.6.4",
     "@shopify/performance": "^1.3.6",
