--- a/packages/magic-entries-webpack-plugin/package.json
+++ b/packages/magic-entries-webpack-plugin/package.json
@@ -20,6 +20,9 @@
     "url": "https://github.com/Shopify/quilt/issues"
   },
   "homepage": "https://github.com/Shopify/quilt/blob/main/packages/magic-entries-webpack-plugin/README.md",
+  "engines": {
+    "node": ">=12.14.0"
+  },
   "dependencies": {
     "glob": "^7.1.6",
     "glob-to-regexp": "^0.4.1"
