--- a/packages/performance/package.json
+++ b/packages/performance/package.json
@@ -20,6 +20,9 @@
     "url": "https://github.com/Shopify/quilt/issues"
   },
   "homepage": "https://github.com/Shopify/quilt/blob/main/packages/performance/README.md",
+  "engines": {
+    "node": ">=12.14.0"
+  },
   "files": [
     "build/*",
     "!*.tsbuildinfo",
