--- a/packages/react-bugsnag/package.json
+++ b/packages/react-bugsnag/package.json
@@ -20,6 +20,9 @@
     "url": "https://github.com/Shopify/quilt/issues"
   },
   "homepage": "https://github.com/Shopify/quilt/blob/main/packages/react-bugsnag/README.md",
+  "engines": {
+    "node": ">=12.14.0"
+  },
   "dependencies": {
     "@bugsnag/js": "^7.1.1",
     "@bugsnag/plugin-react": "^7.1.1"
