--- a/packages/react-compose/package.json
+++ b/packages/react-compose/package.json
@@ -19,6 +19,9 @@
     "url": "https://github.com/Shopify/quilt/issues"
   },
   "homepage": "https://github.com/Shopify/quilt/blob/main/packages/react-compose/README.md",
+  "engines": {
+    "node": ">=12.14.0"
+  },
   "dependencies": {
     "@shopify/useful-types": "^2.4.2",
     "hoist-non-react-statics": "^3.0.1"
