--- a/packages/react-csrf/package.json
+++ b/packages/react-csrf/package.json
@@ -20,6 +20,9 @@
     "url": "https://github.com/Shopify/quilt/issues"
   },
   "homepage": "https://github.com/Shopify/quilt/blob/main/packages/react-csrf/README.md",
+  "engines": {
+    "node": ">=12.14.0"
+  },
   "peerDependencies": {
     "react": ">=16.8.0 <17.0.0"
   },
