--- a/packages/react-form-state/package.json
+++ b/packages/react-form-state/package.json
@@ -19,6 +19,9 @@
     "url": "https://github.com/Shopify/quilt/issues"
   },
   "homepage": "https://github.com/Shopify/quilt/blob/main/packages/react-form-state/README.md",
+  "engines": {
+    "node": ">=12.14.0"
+  },
   "dependencies": {
     "@shopify/predicates": "^1.3.4",
     "fast-deep-equal": "^3.1.3"
