--- a/packages/react-hooks/package.json
+++ b/packages/react-hooks/package.json
@@ -23,6 +23,9 @@
     "react": ">=16.8.0 <17.0.0"
   },
   "homepage": "https://github.com/Shopify/quilt/blob/main/packages/react-hooks/README.md",
+  "engines": {
+    "node": ">=12.14.0"
+  },
   "files": [
     "build/*",
     "!*.tsbuildinfo",
