--- a/packages/react-server/package.json
+++ b/packages/react-server/package.json
@@ -20,6 +20,9 @@
     "url": "https://github.com/Shopify/quilt/issues"
   },
   "homepage": "https://github.com/Shopify/quilt/blob/main/packages/react-server/README.md",
+  "engines": {
+    "node": ">=12.14.0"
+  },
   "dependencies": {
     "@shopify/network": "^1.6.4",
     "@shopify/react-async": "^3.2.8",
