--- a/packages/react-universal-provider/package.json
+++ b/packages/react-universal-provider/package.json
@@ -20,6 +20,9 @@
     "url": "https://github.com/Shopify/quilt/issues"
   },
   "homepage": "https://github.com/Shopify/quilt/blob/main/packages/react-universal-provider/README.md",
+  "engines": {
+    "node": ">=12.14.0"
+  },
   "dependencies": {
     "@shopify/react-effect": "^3.3.6",
     "@shopify/react-html": "^10.2.11"
