--- a/packages/web-worker/package.json
+++ b/packages/web-worker/package.json
@@ -20,6 +20,9 @@
     "url": "https://github.com/Shopify/quilt/issues"
   },
   "homepage": "https://github.com/Shopify/quilt/blob/main/packages/web-worker/README.md",
+  "engines": {
+    "node": ">=12.14.0"
+  },
   "dependencies": {
     "@shopify/rpc": "^1.1.4",
     "loader-utils": "^1.0.0",
