Simplify CI config (#1908)
Refactors our CI suite, moving from multiple simultaneous jobs to running building, linting, unit tests and e2e tests in sequence.

The net result is one job that has a slightly slower wall clock time for all jobs to complete (4.5ish mins => 5.5ish mins), but takes less CPU time overall - as the multiple jobs duplicate effort in doing yarn installs.

This means one job per node version (i.e. 3 checks total) instead of 4 jobs per node version (i.e. 12 checks total) which is easier to read in the checks list, and easier to configure. This is worth the extra minute or so taken IMO.

--- a/shipit.yml
+++ b/shipit.yml
@@ -1,17 +1,8 @@
 ci:
   require:
-    - node-unit-tests (10.x)
-    - node-unit-tests (12.x)
-    - node-unit-tests (14.x)
-    - node-e2e-tests (10.x)
-    - node-e2e-tests (12.x)
-    - node-e2e-tests (14.x)
-    - node-lint (10.x)
-    - node-lint (12.x)
-    - node-lint (14.x)
-    - node-build (10.x)
-    - node-build (12.x)
-    - node-build (14.x)
+    - node-tests (10.x)
+    - node-tests (12.x)
+    - node-tests (14.x)
 dependencies:
   post:
     - npm config set @shopify:registry https://registry.npmjs.org
