--- a/.github/workflows/node-ci.yml
+++ b/.github/workflows/node-ci.yml
@@ -1,18 +1,18 @@
 name: Node-CI
 
 on:
-  push:
-    branches: [main]
   pull_request:
+    branches: ['**']
+  push:
     branches: [main]
 
 jobs:
-  node-lint:
+  node-tests:
     runs-on: ubuntu-latest
     strategy:
       matrix:
         node-version: [10.x, 12.x, 14.x]
-    timeout-minutes: 10
+    timeout-minutes: 15
 
     steps:
       - uses: actions/checkout@v2
@@ -32,9 +32,9 @@ jobs:
         name: Restore yarn cache
         with:
           path: ${{ steps.yarn-cache-get-dir.outputs.dir }}
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          key: ${{ runner.os }}-node${{ matrix.node-version }}-yarn-${{ hashFiles('**/yarn.lock') }}
           restore-keys: |
-            ${{ runner.os }}-yarn-
+            ${{ runner.os }}-node${{ matrix.node-version }}-yarn-
 
       - uses: actions/cache@v2
         id: sewing-kit-cache
@@ -42,157 +42,27 @@ jobs:
         with:
           path: |
             .sewing-kit/
-          key: ${{ runner.os }}-sewing-kit-${{ github.sha }}
+            ./packages/*/build/
+            ./packages/*/*.esnext
+            ./packages/*/*.mjs
+            ./packages/*/*.js
+          key: ${{ runner.os }}-node${{ matrix.node-version }}-sewing-kit-${{ github.sha }}
           restore-keys: |
-            ${{ runner.os }}-sewing-kit-
+            ${{ runner.os }}-node${{ matrix.node-version }}-sewing-kit-
 
       - name: 📦 Install dependencies
-        run: yarn --production=false --frozen-lockfile
+        run: yarn --frozen-lockfile
+
+      - name: 🔨 Build
+        run: yarn build
 
       - name: 💅🏼 Lint
         run: |
           yarn lint
           yarn ci:lint-docs
 
-  node-build:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [10.x, 12.x, 14.x]
-
-    steps:
-      - uses: actions/checkout@v2
-        name: Checkout
-
-      - uses: actions/setup-node@v1
-        name: Use Node.js ${{ matrix.node-version }}
-        with:
-          node-version: ${{ matrix.node-version }}
-
-      - name: Get yarn cache directory
-        id: yarn-cache-get-dir
-        run: echo "::set-output name=dir::$(yarn cache dir)"
-
-      - uses: actions/cache@v2
-        id: yarn-cache
-        name: Restore yarn cache
-        with:
-          path: ${{ steps.yarn-cache-get-dir.outputs.dir }}
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-yarn-
-
-      - uses: actions/cache@v2
-        id: build-cache
-        name: Restore build cache
-        with:
-          path: |
-            .sewing-kit/
-            ./packages/*/build/
-          key: ${{ runner.os }}-${{ matrix.node-version }}-build-${{ github.sha }}
-          restore-keys: |
-            ${{ runner.os }}-${{ matrix.node-version }}-build-
-
-      - name: 📦 Install dependencies
-        run: yarn --production=false --frozen-lockfile
-
-      - name: 🔨 Build
-        run: yarn build
-
-  node-e2e-tests:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [10.x, 12.x, 14.x]
-
-    steps:
-      - uses: actions/checkout@v2
-        name: Checkout
-
-      - uses: actions/setup-node@v1
-        name: Use Node.js ${{ matrix.node-version }}
-        with:
-          node-version: ${{ matrix.node-version }}
-
-      - name: Get yarn cache directory
-        id: yarn-cache-get-dir
-        run: echo "::set-output name=dir::$(yarn cache dir)"
-
-      - uses: actions/cache@v2
-        id: yarn-cache
-        name: Restore yarn cache
-        with:
-          path: ${{ steps.yarn-cache-get-dir.outputs.dir }}
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-yarn-
-
-      - uses: actions/cache@v2
-        id: build-cache
-        name: Restore build cache
-        with:
-          # index packages files need to be cached for e2e tests
-          path: |
-            .sewing-kit/
-            ./packages/*/build/
-            ./packages/*/*.esnext
-            ./packages/*/*.mjs
-            ./packages/*/*.js
-          key: ${{ runner.os }}-${{ matrix.node-version }}-build-${{ github.sha }}
-          restore-keys: |
-            ${{ runner.os }}-${{ matrix.node-version }}-build-
-
-      - name: 📦 Install dependencies
-        run: yarn --production=false --frozen-lockfile
-
-      - name: 🔨 Build
-        run: yarn build
+      - name: Unit tests
+        run: yarn test "^(?:(?!(address|react-server)).)*$"
 
       - name: E2E tests
         run: yarn test --debug "(address|react-server)"
-
-  node-unit-tests:
-    runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [10.x, 12.x, 14.x]
-
-    steps:
-      - uses: actions/checkout@v2
-        name: Checkout
-
-      - uses: actions/setup-node@v1
-        name: Use Node.js ${{ matrix.node-version }}
-        with:
-          node-version: ${{ matrix.node-version }}
-
-      - name: Get yarn cache directory
-        id: yarn-cache-get-dir
-        run: echo "::set-output name=dir::$(yarn cache dir)"
-
-      - uses: actions/cache@v2
-        id: yarn-cache
-        name: Restore yarn cache
-        with:
-          path: ${{ steps.yarn-cache-get-dir.outputs.dir }}
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-yarn-
-
-      - uses: actions/cache@v2
-        id: build-cache
-        name: Restore build cache
-        with:
-          path: |
-            .sewing-kit/
-            ./packages/*/build/
-          key: ${{ runner.os }}-build-${{ secrets.CACHE_VERSION }}-${{ matrix.node-version }}-${{ github.sha }}
-          restore-keys: |
-            ${{ runner.os }}-build-${{ secrets.CACHE_VERSION }}-${{ matrix.node-version }}-
-
-      - name: 📦 Install dependencies
-        run: yarn --production=false --frozen-lockfile
-
-      - name: Unit tests
-        run: yarn test:ci "^(?:(?!(address|react-server)).)*$"
