--- a/package.json
+++ b/package.json
@@ -7,10 +7,7 @@
     "lint": "skn lint",
     "lint:changelogs": "node scripts/lint-changelogs.js",
     "ci:lint-docs": "yarn generate docs && ./scripts/check-docs.sh",
-    "_test": "NODE_ICU_DATA=node_modules/full-icu skn test",
-    "pretest": "yarn build",
-    "test": "yarn _test",
-    "test:ci": "yarn test --coverage",
+    "test": "NODE_ICU_DATA=node_modules/full-icu skn test",
     "check": "lerna run check",
     "release": "yarn lint:changelogs && lerna version --no-push --include-merged-tags",
     "clean": "rimraf ./packages/*/build ./packages/*/*.{d.ts,js,esnext,mjs} .sewing-kit",
