--- a/.github/workflows/node-ci.yml
+++ b/.github/workflows/node-ci.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [10.x, 12.x, 14.x]
+        node-version: ['12.14', '14.x']
     timeout-minutes: 15
 
     steps:
@@ -42,10 +42,6 @@ jobs:
         with:
           path: |
             .sewing-kit/
-            ./packages/*/build/
-            ./packages/*/*.esnext
-            ./packages/*/*.mjs
-            ./packages/*/*.js
           key: ${{ runner.os }}-node${{ matrix.node-version }}-sewing-kit-${{ github.sha }}
           restore-keys: |
             ${{ runner.os }}-node${{ matrix.node-version }}-sewing-kit-
