--- a/shipit.yml
+++ b/shipit.yml
@@ -1,7 +1,6 @@
 ci:
   require:
-    - node-tests (10.x)
-    - node-tests (12.x)
+    - node-tests (12.14)
     - node-tests (14.x)
 dependencies:
   post:
