Tidying dev.yml
- use consistent yarn version
- always use `vNUMBER` syntax
- always define node version, then yarn

--- a/dev.yml
+++ b/dev.yml
@@ -3,7 +3,7 @@ type: node
 up:
   - node:
       version: v12.14.0
-      yarn: 1.22.5
+      yarn: v1.22.5
 commands:
   __default__: start
   build: yarnpkg build
