--- a/packages/polyfills/package.json
+++ b/packages/polyfills/package.json
@@ -124,31 +124,7 @@
     "noop.js",
     "noop.mjs",
     "noop.esnext",
-    "noop.d.ts",
-    "unhandled-rejection.browser.js",
-    "unhandled-rejection.browser.mjs",
-    "unhandled-rejection.browser.esnext",
-    "unhandled-rejection.browser.d.ts",
-    "unhandled-rejection.jest.js",
-    "unhandled-rejection.jest.mjs",
-    "unhandled-rejection.jest.esnext",
-    "unhandled-rejection.jest.d.ts",
-    "unhandled-rejection.node.js",
-    "unhandled-rejection.node.mjs",
-    "unhandled-rejection.node.esnext",
-    "unhandled-rejection.node.d.ts",
-    "url.browser.js",
-    "url.browser.mjs",
-    "url.browser.esnext",
-    "url.browser.d.ts",
-    "url.jest.js",
-    "url.jest.mjs",
-    "url.jest.esnext",
-    "url.jest.d.ts",
-    "url.node.js",
-    "url.node.mjs",
-    "url.node.esnext",
-    "url.node.d.ts"
+    "noop.d.ts"
   ],
   "module": "index.mjs",
   "esnext": "index.esnext",
@@ -258,36 +234,6 @@
       "import": "./noop.mjs",
       "require": "./noop.js",
       "esnext": "./noop.esnext"
-    },
-    "./unhandled-rejection.browser": {
-      "import": "./unhandled-rejection.browser.mjs",
-      "require": "./unhandled-rejection.browser.js",
-      "esnext": "./unhandled-rejection.browser.esnext"
-    },
-    "./unhandled-rejection.jest": {
-      "import": "./unhandled-rejection.jest.mjs",
-      "require": "./unhandled-rejection.jest.js",
-      "esnext": "./unhandled-rejection.jest.esnext"
-    },
-    "./unhandled-rejection.node": {
-      "import": "./unhandled-rejection.node.mjs",
-      "require": "./unhandled-rejection.node.js",
-      "esnext": "./unhandled-rejection.node.esnext"
-    },
-    "./url.browser": {
-      "import": "./url.browser.mjs",
-      "require": "./url.browser.js",
-      "esnext": "./url.browser.esnext"
-    },
-    "./url.jest": {
-      "import": "./url.jest.mjs",
-      "require": "./url.jest.js",
-      "esnext": "./url.jest.esnext"
-    },
-    "./url.node": {
-      "import": "./url.node.mjs",
-      "require": "./url.node.js",
-      "esnext": "./url.node.esnext"
     }
   }
 }
