Upgrade to webpack 5
Co-authored-by: Michelle Chen <michelle.chen@shopify.com>
Co-authored-by: Ates Goral <ates.goral@shopify.com>"

--- a/packages/magic-entries-webpack-plugin/package.json
+++ b/packages/magic-entries-webpack-plugin/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/magic-entries-webpack-plugin",
-  "version": "1.2.6",
+  "version": "2.0.0-webpack-5-beta.2",
   "license": "MIT",
   "description": "A webpack plugin that automatically sets up entrypoints from filename conventions",
   "main": "index.js",
@@ -39,8 +39,10 @@
     "index.esnext"
   ],
   "devDependencies": {
+    "@types/webpack": "^4.25.1",
     "@types/webpack-virtual-modules": "^0.1.0",
     "setimmediate": "^1.0.5",
+    "webpack": "^4.25.1",
     "webpack-virtual-modules": "^0.4.3"
   },
   "module": "index.mjs",
