--- a/packages/web-worker/tsconfig.json
+++ b/packages/web-worker/tsconfig.json
@@ -4,10 +4,7 @@
   "compilerOptions": {
     "outDir": "build/ts",
     "baseUrl": "src",
-    "rootDir": "src",
-    "paths": {
-      "webpack": ["node_modules/webpack"]
-    }
+    "rootDir": "src"
   },
   "include": [
     "../../config/typescript/*.d.ts",
