--- a/packages/graphql-mini-transforms/package.json
+++ b/packages/graphql-mini-transforms/package.json
@@ -25,17 +25,17 @@
   },
   "dependencies": {
     "@jest/transform": "^27.0.2",
-    "@types/fs-extra": "^9.0.11",
-    "@types/webpack": "^4.41.11",
     "fs-extra": "^9.1.0",
     "graphql": ">=14.5.0 <15.0.0",
-    "graphql-typed": "^1.0.0",
-    "loader-utils": "^2.0.0"
+    "graphql-typed": "^1.0.0"
   },
   "devDependencies": {
+    "@types/fs-extra": "^9.0.11",
     "@types/common-tags": "^1.8.0",
-    "@types/loader-utils": "^1.1.3",
     "common-tags": "^1.8.0"
+  },
+  "peerDependencies": {
+    "webpack": ">=5.38.0"
   },
   "files": [
     "build/*",
