Upgrade to webpack 5
Co-authored-by: Michelle Chen <michelle.chen@shopify.com>
Co-authored-by: Ates Goral <ates.goral@shopify.com>"

--- a/packages/address/package.json
+++ b/packages/address/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/address",
-  "version": "3.0.11",
+  "version": "4.0.0-wp5-beta.1",
   "license": "MIT",
   "description": "Address utilities for formatting addresses",
   "main": "index.js",
@@ -23,8 +23,8 @@
     "node": ">=12.14.0"
   },
   "devDependencies": {
-    "@shopify/address-mocks": "^2.0.11",
-    "@shopify/jest-dom-mocks": "^3.0.9"
+    "@shopify/address-mocks": "^3.0.0-wp5-beta.1",
+    "@shopify/jest-dom-mocks": "^4.0.0-wp5-beta.1"
   },
   "sideEffects": false,
   "dependencies": {
