--- a/packages/react-server/package.json
+++ b/packages/react-server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-server",
-  "version": "1.2.11",
+  "version": "2.0.0-wp5-beta.3",
   "license": "MIT",
   "description": "Utilities for React server-side rendering",
   "main": "index.js",
@@ -32,7 +32,7 @@
   },
   "dependencies": {
     "@shopify/network": "^2.0.4",
-    "@shopify/react-async": "^4.1.11",
+    "@shopify/react-async": "^5.0.0-wp5-beta.1",
     "@shopify/react-cookie": "^1.1.11",
     "@shopify/react-effect": "^4.1.7",
     "@shopify/react-html": "^11.1.10",
@@ -52,12 +52,13 @@
     "@types/koa": "^2.0.0",
     "@types/webpack-virtual-modules": "^0.1.0",
     "get-port": "^5.0.0",
+    "memfs": "^3.2.2",
     "node-loader": "^1.0.0",
     "react": "^17.0.2",
     "react-dom": "17.0.2",
     "saddle-up": "^0.5.4",
     "setimmediate": "^1.0.5",
-    "webpack": "^4.25.1"
+    "webpack": ">=5.40.0"
   },
   "peerDependencies": {
     "cross-fetch": ">=3.0.0",
