--- a/packages/async/package.json
+++ b/packages/async/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/async",
-  "version": "3.0.7",
+  "version": "4.0.0-wp5-beta.1",
   "license": "MIT",
   "description": "Primitives for loading parts of an application asynchronously",
   "main": "index.js",
@@ -36,8 +36,7 @@
     "@babel/traverse": ">=7.0.0",
     "@babel/types": ">=7.0.0",
     "@types/babel__core": ">=7.0.0",
-    "@types/babel__traverse": ">=7.0.0",
-    "@types/webpack": "^4.0.0"
+    "@types/babel__traverse": ">=7.0.0"
   },
   "files": [
     "build/",
