--- a/packages/graphql-mini-transforms/package.json
+++ b/packages/graphql-mini-transforms/package.json
@@ -1,6 +1,6 @@
 {
   "name": "graphql-mini-transforms",
-  "version": "3.2.2",
+  "version": "4.0.0-wp5-beta.6",
   "license": "MIT",
   "description": "Transformers for importing .graphql files in various build tools.",
   "main": "index.js",
@@ -38,17 +38,17 @@
   },
   "dependencies": {
     "@jest/transform": "^27.0.2",
-    "@types/fs-extra": "^9.0.11",
-    "@types/webpack": "^4.41.11",
     "fs-extra": "^9.1.0",
     "graphql": ">=14.5.0 <16.0.0",
-    "graphql-typed": "^1.1.1",
-    "loader-utils": "^2.0.0"
+    "graphql-typed": "^1.1.1"
   },
   "devDependencies": {
     "@types/common-tags": "^1.8.0",
-    "@types/loader-utils": "^1.1.3",
-    "common-tags": "^1.8.0"
+    "common-tags": "^1.8.0",
+    "webpack": "^5.40.0"
+  },
+  "peerDependencies": {
+    "webpack": ">=5.38.0"
   },
   "files": [
     "build/",
