--- a/packages/jest-dom-mocks/package.json
+++ b/packages/jest-dom-mocks/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/jest-dom-mocks",
-  "version": "3.0.9",
+  "version": "4.0.0-wp5-beta.1",
   "license": "MIT",
   "description": "Jest mocking utilities for working with the DOM",
   "main": "index.js",
@@ -23,7 +23,7 @@
     "node": ">=12.14.0"
   },
   "dependencies": {
-    "@shopify/async": "^3.0.7",
+    "@shopify/async": "^4.0.0-wp5-beta.1",
     "@types/fetch-mock": "^7.3.3",
     "@types/lolex": "^2.1.3",
     "fetch-mock": "^9.11.0",
