--- a/packages/react-idle/package.json
+++ b/packages/react-idle/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-idle",
-  "version": "2.1.6",
+  "version": "3.0.0-wp5-beta.1",
   "license": "MIT",
   "description": "Utilities for working with idle callbacks in React",
   "main": "index.js",
@@ -24,7 +24,7 @@
     "node": ">=12.14.0"
   },
   "dependencies": {
-    "@shopify/async": "^3.0.7",
+    "@shopify/async": "^4.0.0-wp5-beta.1",
     "@shopify/useful-types": "^3.0.5"
   },
   "peerDependencies": {
