--- a/packages/web-worker/package.json
+++ b/packages/web-worker/package.json
@@ -34,7 +34,6 @@
     "@types/babel__traverse": ">=7.0.0",
     "@types/koa-mount": "^3.0.1",
     "@types/loader-utils": "^1.0.0",
-    "@types/webpack": "^4.0.0",
     "@types/webpack-virtual-modules": "^0.1.1",
     "koa-mount": "^3.0.0"
   },
@@ -60,7 +59,7 @@
   ],
   "optionalDependencies": {
     "@babel/core": "^7.0.0",
-    "webpack": "^4.25.1"
+    "webpack": ">=5.38.0 <6.0.0"
   },
   "module": "index.mjs",
   "esnext": "index.esnext",
