--- a/packages/address-mocks/package.json
+++ b/packages/address-mocks/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/address-mocks",
-  "version": "2.0.2",
+  "version": "2.0.2-webpack-5-beta.2",
   "license": "MIT",
   "description": "Address mocks for `@shopify/address`",
   "main": "index.js",
@@ -28,7 +28,7 @@
   "sideEffects": false,
   "dependencies": {
     "@shopify/address-consts": "^3.0.1",
-    "@shopify/jest-dom-mocks": "^3.0.1"
+    "@shopify/jest-dom-mocks": "^3.0.1-webpack-5-beta.2"
   },
   "files": [
     "build/*",
