--- a/packages/dates/package.json
+++ b/packages/dates/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/dates",
-  "version": "1.0.1",
+  "version": "1.0.1-webpack-5-beta.2",
   "license": "MIT",
   "description": "Lightweight date operations library",
   "main": "index.js",
@@ -27,7 +27,7 @@
     "@shopify/decorators": "^2.0.0"
   },
   "devDependencies": {
-    "@shopify/jest-dom-mocks": "^3.0.1"
+    "@shopify/jest-dom-mocks": "^3.0.1-webpack-5-beta.2"
   },
   "files": [
     "build/*",
