--- a/packages/react-async/package.json
+++ b/packages/react-async/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-async",
-  "version": "4.0.1",
+  "version": "4.0.1-webpack-5-beta.2",
   "license": "MIT",
   "description": "Tools for creating powerful, asynchronously-loaded React components",
   "main": "index.js",
@@ -24,11 +24,11 @@
     "node": ">=12.14.0"
   },
   "dependencies": {
-    "@shopify/async": "^3.0.1",
+    "@shopify/async": "^3.0.1-webpack-5-beta.2",
     "@shopify/react-effect": "^4.0.1",
     "@shopify/react-hooks": "^2.0.1",
     "@shopify/react-hydrate": "^2.0.1",
-    "@shopify/react-idle": "^2.0.1",
+    "@shopify/react-idle": "^2.0.1-webpack-5-beta.2",
     "@shopify/react-intersection-observer": "^3.0.1",
     "@shopify/useful-types": "^3.0.1"
   },
