--- a/packages/react-google-analytics/package.json
+++ b/packages/react-google-analytics/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-google-analytics",
-  "version": "4.0.1",
+  "version": "4.0.1-webpack-5-beta.2",
   "license": "MIT",
   "description": "Allows React apps to easily embed Google Analytics scripts",
   "main": "index.js",
@@ -24,7 +24,7 @@
     "node": ">=12.14.0"
   },
   "dependencies": {
-    "@shopify/react-import-remote": "^2.0.1"
+    "@shopify/react-import-remote": "^2.0.1-webpack-5-beta.2"
   },
   "peerDependencies": {
     "react": "^16.4.1"
