--- a/packages/react-i18n/package.json
+++ b/packages/react-i18n/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-i18n",
-  "version": "6.0.1",
+  "version": "6.0.1-webpack-5-beta.2",
   "license": "MIT",
   "description": "i18n utilities for React handling translations, formatting, and more",
   "main": "index.js",
@@ -33,7 +33,7 @@
     "intl-pluralrules": "^0.2.1"
   },
   "dependencies": {
-    "@shopify/dates": "^1.0.1",
+    "@shopify/dates": "^1.0.1-webpack-5-beta.2",
     "@shopify/decorators": "^2.0.0",
     "@shopify/function-enhancers": "^2.0.0",
     "@shopify/i18n": "^1.0.1",
