--- a/packages/react-idle/package.json
+++ b/packages/react-idle/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-idle",
-  "version": "2.0.1",
+  "version": "2.0.1-webpack-5-beta.2",
   "license": "MIT",
   "description": "Utilities for working with idle callbacks in React",
   "main": "index.js",
@@ -24,7 +24,7 @@
     "node": ">=12.14.0"
   },
   "dependencies": {
-    "@shopify/async": "^3.0.1",
+    "@shopify/async": "^3.0.1-webpack-5-beta.2",
     "@shopify/useful-types": "^3.0.1"
   },
   "peerDependencies": {
