--- a/packages/web-worker/package.json
+++ b/packages/web-worker/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/web-worker",
-  "version": "2.0.1",
+  "version": "2.0.1-webpack-5-beta.2",
   "license": "MIT",
   "description": "Tools for making web workers fun to use",
   "main": "index.js",
