Update the changelog linter and add version script from skn

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "NODE_ICU_DATA=node_modules/full-icu skn test",
     "check": "lerna run check",
     "release": "yarn lint:changelogs && lerna version --no-push --include-merged-tags",
+    "version": "node scripts/update-changelogs-on-version.js",
     "clean": "rimraf ./packages/*/build ./packages/*/*.{d.ts,js,esnext,mjs} .sewing-kit",
     "generate": "plop",
     "generate:package": "plop package && yarn plop docs",
