--- a/packages/react-form-state/tsconfig.json
+++ b/packages/react-form-state/tsconfig.json
@@ -11,9 +11,5 @@
     "./src/**/*.tsx"
   ],
   "exclude": ["**/test/**/*", "**/tests/**/*"],
-  "references": [
-    {"path": "../enzyme-utilities"},
-    {"path": "../predicates"},
-    {"path": "../useful-types"}
-  ]
+  "references": [{"path": "../predicates"}, {"path": "../useful-types"}]
 }
