--- a/packages/react-google-analytics/tsconfig.json
+++ b/packages/react-google-analytics/tsconfig.json
@@ -11,8 +11,5 @@
     "./src/**/*.tsx"
   ],
   "exclude": ["**/test/**/*", "**/tests/**/*"],
-  "references": [
-    {"path": "../enzyme-utilities"},
-    {"path": "../react-import-remote"}
-  ]
+  "references": [{"path": "../react-import-remote"}]
 }
