update restore key

--- a/.github/workflows/node-ci.yml
+++ b/.github/workflows/node-ci.yml
@@ -44,7 +44,7 @@ jobs:
             .sewing-kit/
           key: ${{ runner.os }}-node${{ matrix.node-version }}-sewing-kit-v1-${{ github.sha }}
           restore-keys: |
-            ${{ runner.os }}-node${{ matrix.node-version }}-sewing-kit-
+            ${{ runner.os }}-node${{ matrix.node-version }}-sewing-kit-v1-
 
       - name: 📦 Install dependencies
         run: yarn --frozen-lockfile
