--- a/packages/react-server/package.json
+++ b/packages/react-server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-server",
-  "version": "1.1.2",
+  "version": "1.1.2-webpack-5-beta.4",
   "license": "MIT",
   "description": "Utilities for React server-side rendering",
   "main": "index.js",
