--- a/packages/react-web-worker/package.json
+++ b/packages/react-web-worker/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-web-worker",
-  "version": "2.1.0",
+  "version": "2.1.0-webpack-5-betat.10",
   "license": "MIT",
   "description": "A hook for using web workers in React applications",
   "main": "index.js",
@@ -26,7 +26,7 @@
   "dependencies": {
     "@shopify/react-hooks": "^2.1.0",
     "@shopify/useful-types": "^3.0.1",
-    "@shopify/web-worker": "^2.1.0"
+    "@shopify/web-worker": "^2.1.0-webpack-5-betat.10"
   },
   "peerDependencies": {
     "react": ">=16.8.0 <18.0.0",
