Adjust eslint configs (#1979)
- Stop eslint ignoring sk config files and adjust gql config
- Allow gql config, but ignore fixture files

--- a/.eslintignore
+++ b/.eslintignore
@@ -7,6 +7,9 @@ packages/*/build
 **/*.js
 **/*.esnext
 **/*.mjs
-**/sewing-kit.config.ts
-config/sewing-kit/index.ts
 **/test/fixtures/**/default-types/*.ts
+
+# Don't lint fixture graphql files as they include schemas
+packages/graphql-config-utilities/src/tests/fixtures/**/*.graphql
+packages/graphql-typescript-definitions/test/fixtures/**/*.graphql
+packages/graphql-validate-fixtures/test/fixtures/**/*.graphql
