--- a/.prettierignore
+++ b/.prettierignore
@@ -5,3 +5,7 @@ coverage
 *.svg
 templates/*.md
 /README.md
+
+# Deliberatly invalid code that prettier can not process
+packages/graphql-validate-fixtures/test/fixtures/fixture-invalid/**/*.graphql
+packages/graphql-validate-fixtures/test/fixtures/fixture-invalid/**/*.json
